# garbage-collector

./: data.py  demo.py
garbage-collector/: .env.example  alembic.ini  gc.db  pyproject.toml
garbage-collector/alembic/: env.py
garbage-collector/alembic/versions/: 71a10a9c3500_added_column_for_garbage_quantity_for_.py  8b576047312a_create_initial_models.py  945ce30879c7_updated_boolean_column_with_default_.py
garbage-collector/src/: readme.md
garbage-collector/src/garbage_collector/: main.py
garbage-collector/src/garbage_collector/core/: config.py
garbage-collector/src/garbage_collector/database/: database.py
garbage-collector/src/garbage_collector/models/: base.py  model.py
garbage-collector/src/garbage_collector/routers/: api_router.py  auth_router.py  bin_truck_assignment.py  garbage_bin.py  location.py  truck.py
garbage-collector/src/garbage_collector/schemas/: assignment.py  auth.py  bin.py  enums.py  insights.py  location.py  truck.py
garbage-collector/src/garbage_collector/services/: auth.py  bin.py  location.py  smart_management.py  truck.py  user.py
